examples/fail/calleq2.niu
import "std/opes.niu"
struct Hoge {} {}

trait Tr {
  fn test(self: &Self, t: u64) -> void;
}
trait Tr2 {
  fn test(self: &Self, t: u64) -> void;
}


impl Tr for Hoge {
  fn test(self: &Self, t: u64) -> void {
  }
}
impl Tr2 for Hoge {
  fn test(self: &Self, t: u64) -> void {
  }
}



fn main() -> void {
  let a = Hoge {};
  a.test(1u64);
}
